--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-
+    <div>To jest tekst w Divie</div>
+    <p>To jest tekst w paragrafie</p>
+    <span>To jest tekst w Spanie</span>
+    <a>Link</a>
+    <a href="https://google.pl" target="_blank">Google</a>
+    <a href="https://mmcschool.pl" target="_blank" rel="noopener">MMC</a>
 </body>
 
 </html>
