--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
     <a>Link</a>
     <a href="https://google.pl" target="_blank">Google</a>
     <a href="https://mmcschool.pl" target="_blank" rel="noopener">MMC</a>
+    <button>Kliknij mnie!</button>
+    <button disabled>Kliknij mnie!</button>
+
+    <form action="">
+        <label for="">Imię:</label>
+        <input type="text">
+        <label for="">Wiadomość</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+    </form>
+
+    <select name="" id="">
+        <option value="">Czerwony</option>
+        <option value="">Niebieski</option>
+        <option value="" disabled>Zielony</option>
+    </select>
 </body>
 
 </html>
