--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <option value="">Niebieski</option>
         <option value="" disabled>Zielony</option>
     </select>
+
+    <input type="text">
+    <input type="checkbox" checked>
+    <input type="checkbox">
+    <input type="radio">
+    <input type="radio">
+    <input type="radio">
+    <input type="color">
+    <input type="date">
 </body>
 
 </html>
