--- a/index.html
+++ b/index.html
@@ -42,6 +42,32 @@
     <input type="color">
     <input type="date">
     <input type="password">
+
+    <del>Lorem ipsum dolor sit amet consectetur adipisicing elit.</del><br>
+    <s>Lorem ipsum dolor sit amet consectetur adipisicing elit.</s>
+    <br><br>
+
+    <b>Lorem ipsum dolor sit amet.</b> <br>
+    <strong>Lorem ipsum dolor sit amet.</strong>
+
+    <br><br>
+
+    <i>Lorem ipsum dolor sit amet consectetur adipisicing.</i><br>
+    <em>Lorem ipsum dolor, sit amet consectetur adipisicing.
+    </em>
+
+    <br><br>
+
+    <u>Lorem, ipsum dolor.</u>
+
+    <!--
+        strong, em - semantyka
+        b, u, i - css
+    -->
+    <br><br>
+
+    <p>Lorem <mark>ipsum dolor sit amet</mark>, consectetur adipisicing elit.</p>
+
 </body>
 
 </html>
