add sub and sup

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
 
     <p>Lorem <mark>ipsum dolor sit amet</mark>, consectetur adipisicing elit.</p>
 
+    <br><br>
+
+    <p>2<sup>2</sup> = 4</p>
+    <p>H<sub>2</sub>O</p>
+
+    <br><br>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <pre>Lorem    ipsum, dolor sit amet consectetur adipisicing elit.</pre>
+
+    <br><br>
+
+    <p>Lorem, &nbsp;&nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 
 </html>
