--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <br><br>
 
-    <p>Lorem, &nbsp;&nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem, &nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
 </body>
 
 </html>
