--- a/index.html
+++ b/index.html
@@ -10,77 +10,136 @@
     <title>MMC School</title>
 </head>
 
-<body>
-    <div>To jest tekst w Divie</div>
-    <p>To jest tekst w paragrafie</p>
-    <span>To jest tekst w Spanie</span>
-    <a>Link</a>
-    <a href="https://google.pl" target="_blank">Google</a>
-    <a href="https://mmcschool.pl" target="_blank" rel="noopener">MMC</a>
-    <button>Kliknij mnie!</button>
-    <button disabled>Kliknij mnie!</button>
+<br>
+<div>To jest tekst w Divie</div>
+<p>To jest tekst w paragrafie</p>
+<span>To jest tekst w Spanie</span>
+<a>Link</a>
+<a href="https://google.pl" target="_blank">Google</a>
+<a href="https://mmcschool.pl" target="_blank" rel="noopener">MMC</a>
+<button>Kliknij mnie!</button>
+<button disabled>Kliknij mnie!</button>
 
-    <form action="">
-        <label for="">Imię:</label>
-        <input type="text">
-        <label for="">Wiadomość</label>
-        <textarea name="" id="" cols="30" rows="10"></textarea>
-    </form>
-
-    <select name="" id="">
-        <option value="">Czerwony</option>
-        <option value="">Niebieski</option>
-        <option value="" disabled>Zielony</option>
-    </select>
-
+<form action="">
+    <label for="">Imię:</label>
     <input type="text">
-    <input type="checkbox" checked>
-    <input type="checkbox">
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-    <input type="color">
-    <input type="date">
-    <input type="password">
+    <label for="">Wiadomość</label>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
+</form>
 
-    <del>Lorem ipsum dolor sit amet consectetur adipisicing elit.</del><br>
-    <s>Lorem ipsum dolor sit amet consectetur adipisicing elit.</s>
-    <br><br>
+<select name="" id="">
+    <option value="">Czerwony</option>
+    <option value="">Niebieski</option>
+    <option value="" disabled>Zielony</option>
+</select>
 
-    <b>Lorem ipsum dolor sit amet.</b> <br>
-    <strong>Lorem ipsum dolor sit amet.</strong>
+<input type="text">
+<input type="checkbox" checked>
+<input type="checkbox">
+<input type="radio">
+<input type="radio">
+<input type="radio">
+<input type="color">
+<input type="date">
+<input type="password">
 
-    <br><br>
+<del>Lorem ipsum dolor sit amet consectetur adipisicing elit.</del><br>
+<s>Lorem ipsum dolor sit amet consectetur adipisicing elit.</s>
+<br><br>
 
-    <i>Lorem ipsum dolor sit amet consectetur adipisicing.</i><br>
-    <em>Lorem ipsum dolor, sit amet consectetur adipisicing.
-    </em>
+<b>Lorem ipsum dolor sit amet.</b> <br>
+<strong>Lorem ipsum dolor sit amet.</strong>
 
-    <br><br>
+<br><br>
 
-    <u>Lorem, ipsum dolor.</u>
+<i>Lorem ipsum dolor sit amet consectetur adipisicing.</i><br>
+<em>Lorem ipsum dolor, sit amet consectetur adipisicing.
+</em>
 
-    <!--
+<br><br>
+
+<u>Lorem, ipsum dolor.</u>
+
+<!--
         strong, em - semantyka
         b, u, i - css
     -->
-    <br><br>
+<br><br>
 
-    <p>Lorem <mark>ipsum dolor sit amet</mark>, consectetur adipisicing elit.</p>
+<p>Lorem <mark>ipsum dolor sit amet</mark>, consectetur adipisicing elit.</p>
 
-    <br><br>
+<br><br>
 
-    <p>2<sup>2</sup> = 4</p>
-    <p>H<sub>2</sub>O</p>
+<p>2<sup>2</sup> = 4</p>
+<p>H<sub>2</sub>O</p>
 
-    <br><br>
+<br><br>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-    <pre>Lorem    ipsum, dolor sit amet consectetur adipisicing elit.</pre>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+<pre>Lorem    ipsum, dolor sit amet consectetur adipisicing elit.</pre>
 
-    <br><br>
+<br><br>
 
-    <p>Lorem, &nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
+<p>Lorem, &nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+<br><br>
+
+<ul>
+    <li>Pozycja 1</li>
+    <li>Pozycja 2</li>
+    <li>Pozycja 3</li>
+</ul>
+
+<br></br>
+
+<ol>
+    <li>Pozycja 1</li>
+    <li>Pozycja 2</li>
+    <li>Pozycja 3</li>
+</ol>
+
+<br></br>
+
+<table>
+    <tr>
+        <th>Tytuł</th>
+        <th>Rodzaj</th>
+    </tr>
+    <tr>
+        <td>Deadpool</td>
+        <td rowspan="3">Komedia</td>
+    </tr>
+    <tr>
+        <td>Killer</td>
+    </tr>
+    <tr>
+        <td>Kac Vegas</td>
+    </tr>
+    <tr>
+        <td>Avengers</td>
+        <td>Akcja</td>
+    </tr>
+</table>
+
+<br></br>
+
+<table>
+    <tr>
+        <td></td>
+        <td>Piątek</td>
+        <td>Sobota</td>
+    </tr>
+    <tr>
+        <td>18:00</td>
+        <td>Film</td>
+        <td>Serial</td>
+    </tr>
+    <tr>
+        <td>21:00</td>
+        <td colspan="2">Spotkanie ze znajomymi</td>
+    </tr>
+</table>
+
 </body>
 
 </html>
