add additional table

--- a/index.html
+++ b/index.html
@@ -1,145 +1,172 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-    <title>MMC School</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./style.css">
+        <title>MMC School</title>
+    </head>
 
-<br>
-<div>To jest tekst w Divie</div>
-<p>To jest tekst w paragrafie</p>
-<span>To jest tekst w Spanie</span>
-<a>Link</a>
-<a href="https://google.pl" target="_blank">Google</a>
-<a href="https://mmcschool.pl" target="_blank" rel="noopener">MMC</a>
-<button>Kliknij mnie!</button>
-<button disabled>Kliknij mnie!</button>
+    <br>
+    <div>To jest tekst w Divie</div>
+    <p>To jest tekst w paragrafie</p>
+    <span>To jest tekst w Spanie</span>
+    <a>Link</a>
+    <a href="https://google.pl" target="_blank">Google</a>
+    <a href="https://mmcschool.pl" target="_blank" rel="noopener">MMC</a>
+    <button>Kliknij mnie!</button>
+    <button disabled>Kliknij mnie!</button>
 
-<form action="">
-    <label for="">Imię:</label>
+    <form action="">
+        <label for="">Imię:</label>
+        <input type="text">
+        <label for="">Wiadomość</label>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+    </form>
+
+    <select name="" id="">
+        <option value="">Czerwony</option>
+        <option value="">Niebieski</option>
+        <option value="" disabled>Zielony</option>
+    </select>
+
     <input type="text">
-    <label for="">Wiadomość</label>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-</form>
+    <input type="checkbox" checked>
+    <input type="checkbox">
+    <input type="radio">
+    <input type="radio">
+    <input type="radio">
+    <input type="color">
+    <input type="date">
+    <input type="password">
 
-<select name="" id="">
-    <option value="">Czerwony</option>
-    <option value="">Niebieski</option>
-    <option value="" disabled>Zielony</option>
-</select>
+    <del>Lorem ipsum dolor sit amet consectetur adipisicing elit.</del><br>
+    <s>Lorem ipsum dolor sit amet consectetur adipisicing elit.</s>
+    <br><br>
 
-<input type="text">
-<input type="checkbox" checked>
-<input type="checkbox">
-<input type="radio">
-<input type="radio">
-<input type="radio">
-<input type="color">
-<input type="date">
-<input type="password">
+    <b>Lorem ipsum dolor sit amet.</b> <br>
+    <strong>Lorem ipsum dolor sit amet.</strong>
 
-<del>Lorem ipsum dolor sit amet consectetur adipisicing elit.</del><br>
-<s>Lorem ipsum dolor sit amet consectetur adipisicing elit.</s>
-<br><br>
+    <br><br>
 
-<b>Lorem ipsum dolor sit amet.</b> <br>
-<strong>Lorem ipsum dolor sit amet.</strong>
+    <i>Lorem ipsum dolor sit amet consectetur adipisicing.</i><br>
+    <em>Lorem ipsum dolor, sit amet consectetur adipisicing.
+    </em>
 
-<br><br>
+    <br><br>
 
-<i>Lorem ipsum dolor sit amet consectetur adipisicing.</i><br>
-<em>Lorem ipsum dolor, sit amet consectetur adipisicing.
-</em>
+    <u>Lorem, ipsum dolor.</u>
 
-<br><br>
-
-<u>Lorem, ipsum dolor.</u>
-
-<!--
+    <!--
         strong, em - semantyka
         b, u, i - css
     -->
-<br><br>
+    <br><br>
 
-<p>Lorem <mark>ipsum dolor sit amet</mark>, consectetur adipisicing elit.</p>
+    <p>Lorem <mark>ipsum dolor sit amet</mark>, consectetur adipisicing elit.</p>
 
-<br><br>
+    <br><br>
 
-<p>2<sup>2</sup> = 4</p>
-<p>H<sub>2</sub>O</p>
+    <p>2<sup>2</sup> = 4</p>
+    <p>H<sub>2</sub>O</p>
 
-<br><br>
+    <br><br>
 
-<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-<pre>Lorem    ipsum, dolor sit amet consectetur adipisicing elit.</pre>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <pre>Lorem    ipsum, dolor sit amet consectetur adipisicing elit.</pre>
 
-<br><br>
+    <br><br>
 
-<p>Lorem, &nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem, &nbsp;&nbsp;&nbsp; ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-<br><br>
+    <br><br>
 
-<ul>
-    <li>Pozycja 1</li>
-    <li>Pozycja 2</li>
-    <li>Pozycja 3</li>
-</ul>
+    <ul>
+        <li>Pozycja 1</li>
+        <li>Pozycja 2</li>
+        <li>Pozycja 3</li>
+    </ul>
 
-<br></br>
+    <br></br>
 
-<ol>
-    <li>Pozycja 1</li>
-    <li>Pozycja 2</li>
-    <li>Pozycja 3</li>
-</ol>
+    <ol>
+        <li>Pozycja 1</li>
+        <li>Pozycja 2</li>
+        <li>Pozycja 3</li>
+    </ol>
 
-<br></br>
+    <br></br>
 
-<table>
-    <tr>
-        <th>Tytuł</th>
-        <th>Rodzaj</th>
-    </tr>
-    <tr>
-        <td>Deadpool</td>
-        <td rowspan="3">Komedia</td>
-    </tr>
-    <tr>
-        <td>Killer</td>
-    </tr>
-    <tr>
-        <td>Kac Vegas</td>
-    </tr>
-    <tr>
-        <td>Avengers</td>
-        <td>Akcja</td>
-    </tr>
-</table>
+    <table>
+        <tr>
+            <th>Tytuł</th>
+            <th>Rodzaj</th>
+        </tr>
+        <tr>
+            <td>Deadpool</td>
+            <td rowspan="3">Komedia</td>
+        </tr>
+        <tr>
+            <td>Killer</td>
+        </tr>
+        <tr>
+            <td>Kac Vegas</td>
+        </tr>
+        <tr>
+            <td>Avengers</td>
+            <td>Akcja</td>
+        </tr>
+    </table>
 
-<br></br>
+    <br></br>
 
-<table>
-    <tr>
-        <td></td>
-        <td>Piątek</td>
-        <td>Sobota</td>
-    </tr>
-    <tr>
-        <td>18:00</td>
-        <td>Film</td>
-        <td>Serial</td>
-    </tr>
-    <tr>
-        <td>21:00</td>
-        <td colspan="2">Spotkanie ze znajomymi</td>
-    </tr>
-</table>
+    <table>
+        <tr>
+            <td></td>
+            <td>Piątek</td>
+            <td>Sobota</td>
+        </tr>
+        <tr>
+            <td>18:00</td>
+            <td>Film</td>
+            <td>Serial</td>
+        </tr>
+        <tr>
+            <td>21:00</td>
+            <td colspan="2">Spotkanie ze znajomymi</td>
+        </tr>
+    </table>
 
-</body>
+    <br></br>
 
-</html>
+    <table>
+        <thead>
+            <tr>
+                <th>Danie</th>
+                <th>Cena</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Kotlet schabowy</td>
+                <td>15 zl</td>
+            </tr>
+            <tr>
+                <td>Pepsi</td>
+                <td>5 zł</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Suma</td>
+                <td>20 zł</td>
+            </tr>
+        </tfoot>
+    </table>
+
+    </body>
+
+    </html>
