--- a/index.html
+++ b/index.html
@@ -173,13 +173,21 @@
         video {
             width: 500px;
         }
+
+        img {
+            width: 500px;
+        }
     </style>
 
     <audio controls src="lifelike-126735.mp3"></audio>
     <video controls src="Kobieta - 58142.mp4">
     </video>
 
+    <br>
+    <br>
+    <br>
 
+    <img src="https://cdn.pixabay.com/photo/2022/11/28/23/28/mountains-7623362_960_720.jpg" alt="Pejzaż">
     </body>
 
     </html>
