--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
+
 </head>
 
 <body>
@@ -23,6 +25,11 @@
         <li>Element nr 5</li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2022/11/28/23/28/mountains-7623362_960_720.jpg" alt="Pejzaż">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias quo provident fuga, totam accusamus quisquam
+        ipsa perferendis iste quos obcaecati aperiam ipsam pariatur exercitationem deleniti id enim ullam unde <est
+            class="8"></est>
+    </p>
+
 </body>
 
 </html>
