--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css" />
     <title>Document</title>
+    <style>
+        p {
+            font-size: 50px;
+        }
+    </style>
 
 </head>
 
@@ -25,9 +30,13 @@
         <li>Element nr 5</li>
     </ul>
     <img src="https://cdn.pixabay.com/photo/2022/11/28/23/28/mountains-7623362_960_720.jpg" alt="Pejzaż">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias quo provident fuga, totam accusamus quisquam
-        ipsa perferendis iste quos obcaecati aperiam ipsam pariatur exercitationem deleniti id enim ullam unde <est
-            class="8"></est>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.<est class="8"></est>
+    </p>
+    <p style="color: gold">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<est class="8"></est>
+    </p>
+    <p style="color: lime">Lorem ipsum, dolor sit amet consectetur adipisicing elit. <est class="8"></est>
+    </p>
+    <p style="color: tomato">Lorem ipsum, dolor sit amet consectetur adipisicing elit.<est class="8"></est>
     </p>
 
 </body>
